Adds jQuery Effects Assignment

--- a/CSS/assignments.css
+++ b/CSS/assignments.css
@@ -10,7 +10,7 @@ h1{
     color: crimson;
     margin-top: 0px;
 }
-#item1,#item2,#item3{
+#item1,#item2,#item3, #item4{
     background-color: cornsilk;
     border-style: solid;
     border-color: #e80010;
