Adds tie game, and fixes elements loading before the page is ready.

--- a/CSS/jQueryProject.css
+++ b/CSS/jQueryProject.css
@@ -1,8 +1,11 @@
+body {
+    display: none;
+}
 #tictactoeboard{
     background-repeat: no-repeat;
 }
 
-#winO,#winX{
+#winO,#winX,#tie{
     color:Red;
     font-family: Nyala;
     font-size: 900%;
